# fotofing

./: .gitignore  AUTHORS  README.md  TODO  configure.ac
src/: .gitignore  Makefile  Makefile.am  calendarpopup.cpp  calendarpopup.h  database.cpp  database.h  file.cpp  file.h  fingerprint.cpp  fingerprint.h  index.cpp  index.h  main.cpp  mainwindow.cpp  mainwindow.h  photo.cpp  photo.h  utils.cpp  utils.h
src/cli/: .gitignore  Makefile.am  main.cpp
src/include/fotofing/: database.h  file.h  index.h  photo.h  plugin.h  source.h  tagger.h  utils.h  workflow.h
src/libfotofing/: Makefile  Makefile.am  database.cpp  exiftags.h  file.cpp  index.cpp  photo.cpp  plugin.cpp  sha1.cpp  sha1.h  source.cpp  tagger.cpp  utils.cpp
src/libfotofing-workflow/: Makefile.am  index.cpp  instance.cpp  operation.cpp  workflow.cpp
src/plugins/: Makefile.am
src/plugins/operations/: Makefile.am
src/plugins/operations/colourify/: Makefile.am  colourify.cpp  colourify.h
src/plugins/operations/refocus/: Makefile.am  refocus.cpp  refocus.h
src/plugins/taggers/: Makefile.am
src/plugins/taggers/exif/: Makefile.am  exif.h  exiftags.h
src/plugins/taggers/features/: Makefile.am  features_config.cpp  features_config.h  features_tagger.h
src/plugins/taggers/histogram/: Makefile.am
src/taggers/: Makefile.am
src/taggers/exif/: Makefile.am  exif.cpp
src/taggers/features/: Makefile.am  config.xml  features.cpp  features_tagger.cpp
src/taggers/histogram/: Makefile.am  histogram.cpp  histogram.h
src/tests/: Makefile  Makefile.am
src/tests/database/: Makefile  Makefile.am
src/tests/database/schema/: Makefile  Makefile.am  schema.cpp
src/tests/taggers/: Makefile.am  taggers.cpp
src/tests/workflow/: Makefile.am  main.cpp
src/ui/: Makefile  Makefile.am  about.cpp  about.h  calendarpopup.cpp  histogramwidget.cpp  library.cpp  library.h  main.cpp  mainwindow.cpp  mainwindow.h  photodetails.cpp  photodetails.h  photoview.cpp  photoview.h  sourcesdialog.cpp  sourcesdialog.h  tab.h  tagdialog.cpp  tagdialog.h  tagview.cpp  tagview.h  ui.cpp  ui.h  uiutils.cpp  uiutils.h  window.cpp  window.h
src/ui/dialogs/: Makefile.am  about.cpp  sourcesdialog.cpp  sourcesdialog.h  tagdialog.cpp
src/ui/edit/: Makefile.am  edit.cpp  edit.h  editpreview.cpp  editpreview.h  operationwidget.cpp  operationwidget.h  workflow.h
src/ui/widgets/: Makefile.am  histogramwidget.cpp  histogramwidget.h  tagview.cpp
