
lib_LTLIBRARIES=libfotofing-operation-colourify.la

libfotofing_operation_colourify_la_SOURCES=colourify.cpp
libfotofing_operation_colourify_la_CPPFLAGS=
libfotofing_operation_colourify_la_LDFLAGS=../../../libfotofing/libfotofing.la ../../../libfotofing-workflow/libfotofing-workflow.la -lgeek-core -lgeek-gfx -latlas

