
lib_LTLIBRARIES=libfotofing-operation-refocus.la

libfotofing_operation_refocus_la_SOURCES=refocus.cpp
libfotofing_operation_refocus_la_CPPFLAGS=-I/usr/include/atlas
libfotofing_operation_refocus_la_LDFLAGS=../../../libfotofing/libfotofing.la ../../../libfotofing-workflow/libfotofing-workflow.la -lgeek-core -lgeek-gfx -latlas -llapack_atlas

